--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Website for mezzaluna farmstead.",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server",
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
