--- a/package.json
+++ b/package.json
@@ -14,20 +14,26 @@
     "body-parser": "^1.17.0",
     "browserify-middleware": "^7.1.0",
     "compression": "^1.6.2",
+    "connect-pg-simple": "^3.1.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.0",
+    "express-session": "^1.15.1",
     "install": "^0.8.7",
+    "joi": "^10.2.2",
     "massive": "^2.6.0",
     "multer": "^1.3.0",
+    "node-uuid": "^1.4.7",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
     "postcss-middleware": "^1.1.3",
     "pug": "^2.0.0-beta11",
     "serve-static": "^1.12.0",
+    "sharp": "^0.17.2",
     "stripe": "^4.15.0",
     "tachyons": "^4.6.2"
   },
   "devDependencies": {
+    "nodemon": "^1.11.0",
     "tape": "^4.6.3"
   }
 }
